--- a/django_development/firstproject/home/templates/index.html
+++ b/django_development/firstproject/home/templates/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TALK WITH CLIENT: Django Templates</title>
-</head>
-<body>
-    <h1>Hello WORLD, this is Arpit Nice to meet you!</h1>
-    <p>Chaar batte with my clients and gapsap with them</p>
-</body>
-</html>
+
+{% extends "base.html" %}
+{% block start %}
+<h1>Hello WORLD, this is Arpit Nice to meet you!</h1>
+<p>Chaar batte with my clients and gapsap with them</p>
+{% endblock %}
